# DPHP

./: .pre-commit-config.yaml  ENVIRONMENT.md  README.md  manage_env.sh
explorer/: CMakeLists.txt  README.md  package.xml
explorer/config/: campus.yaml  forest.yaml  garage.yaml  indoor.yaml  matterport.yaml  tunnel.yaml
explorer/data/: boundary.ply
explorer/include/absl/: CMakeLists.txt
explorer/include/absl/algorithm/: CMakeLists.txt
explorer/include/absl/base/: CMakeLists.txt
explorer/include/absl/container/: CMakeLists.txt
explorer/include/absl/copts/: AbseilConfigureCopts.cmake  GENERATED_AbseilCopts.cmake  generate_copts.py
explorer/include/absl/debugging/: CMakeLists.txt
explorer/include/absl/flags/: CMakeLists.txt
explorer/include/absl/hash/: CMakeLists.txt
explorer/include/absl/memory/: CMakeLists.txt
explorer/include/absl/meta/: CMakeLists.txt
explorer/include/absl/numeric/: CMakeLists.txt
explorer/include/absl/strings/: CMakeLists.txt
explorer/include/absl/synchronization/: CMakeLists.txt
explorer/include/absl/time/: CMakeLists.txt
explorer/include/absl/types/: CMakeLists.txt
explorer/include/absl/utility/: CMakeLists.txt
explorer/include/exploration_path/: exploration_path.h
explorer/include/explorer/: exploration_path.h  explorer_visualizer.h  graph.h  grid.h  grid_world.h  keypose_graph.h  lidar_model.h  local_coverage_planner.h  misc_utils.h  planning_env.h  pointcloud_manager.h  pointcloud_utils.h  rolling_grid.h  rolling_occupancy_grid.h  sensor_coverage_planner_ground.h  tsp_solver.h  viewpoint.h  viewpoint_manager.h
explorer/include/explorer_visualizer/: explorer_visualizer.h
explorer/include/graph/: graph.h  graph_refactored.h
explorer/include/grid/: grid.h
explorer/include/grid_world/: grid_world.h
explorer/include/lidar_model/: lidar_model.h
explorer/include/local_coverage_planner/: local_coverage_planner.h
explorer/include/planning_env/: planning_env.h
explorer/include/pointcloud_manager/: pointcloud_manager.h
explorer/include/rolling_grid/: rolling_grid.h
explorer/include/rolling_occupancy_grid/: rolling_occupancy_grid.h
explorer/include/sensor_coverage_planner/: sensor_coverage_planner_ground.h
explorer/include/tsp_solver/: tsp_solver.h  tsp_solver_refactored.h
explorer/include/utils/: misc_utils.h  pointcloud_utils.h
explorer/include/viewpoint/: viewpoint.h  viewpoint_refactored.h
explorer/include/viewpoint_manager/: viewpoint_manager.h
explorer/launch/: explore.launch  explore_campus.launch  explore_forest.launch  explore_garage.launch  explore_indoor.launch  explore_matterport.launch  explore_tunnel.launch  record_bag.launch
explorer/log/scene_1/: metric_2025-4-5-16-59-52.txt  metric_2025-4-6-22-59-3.txt  metric_2025-4-6-23-2-18.txt  trajectory_2025-4-5-16-59-52.txt  trajectory_2025-4-6-22-59-3.txt  trajectory_2025-4-6-23-2-18.txt
explorer/msg/: DualState.msg  DualStateArray.msg
explorer/or-tools/: README.md
explorer/rviz/: tare_planner_ground.rviz
explorer/src/: exploration_path.cpp  explorer_node.cpp  explorer_visualizer.cpp  graph.cpp  grid_world.cpp  keypose_graph.cpp  lidar_model.cpp  local_coverage_planner.cpp  misc_utils.cpp  navigationBoundary.cpp  planning_env.cpp  pointcloud_manager.cpp  pointcloud_utils.cpp  rolling_grid.cpp  rolling_occupancy_grid.cpp  sensor_coverage_planner_ground.cpp  tsp_solver.cpp  viewpoint.cpp  viewpoint_manager.cpp
explorer/src/Explorer/explorer/: CMakeLists.txt
explorer/src/exploration_path/: exploration_path.cpp
explorer/src/explorer_node/: explorer_node.cpp
explorer/src/explorer_visualizer/: explorer_visualizer.cpp
explorer/src/graph/: graph.cpp  graph_refactored.cpp
explorer/src/grid_world/: grid_world.cpp
explorer/src/keypose_graph/: keypose_graph.cpp
explorer/src/lidar_model/: lidar_model.cpp
explorer/src/local_coverage_planner/: local_coverage_planner.cpp
explorer/src/planning_env/: planning_env.cpp
explorer/src/pointcloud_manager/: pointcloud_manager.cpp
explorer/src/rolling_grid/: rolling_grid.cpp
explorer/src/rolling_occupancy_grid/: rolling_occupancy_grid.cpp
explorer/src/sensor_coverage_planner/: sensor_coverage_planner_ground.cpp
explorer/src/tsp_solver/: tsp_solver.cpp  tsp_solver_refactored.cpp
explorer/src/utils/: misc_utils.cpp  pointcloud_utils.cpp
explorer/src/viewpoint/: viewpoint.cpp  viewpoint_refactored.cpp
explorer/src/viewpoint_manager/: viewpoint_manager.cpp
explorer/test/: README.md  exploration_path_test.cpp  explorer_integration_test.cpp  graph_refactored_test.cpp  graph_test.cpp  grid_world_comprehensive_test.cpp  grid_world_global_planner_test.cpp  grid_world_test.cpp  integration_test.launch  keypose_graph_test.cpp  local_coverage_planner_comprehensive_test.cpp  local_coverage_planner_simple_test.cpp  local_coverage_planner_test.cpp  planning_env_test.cpp  run_tests.sh  sensor_coverage_planner_simple_test.cpp  sensor_coverage_planner_test.cpp  tsp_solver_refactored_test.cpp  tsp_solver_test.cpp  viewpoint_comprehensive_test.cpp  viewpoint_manager_test.cpp  viewpoint_refactored_test.cpp  viewpoint_test.cpp
predictor/: CMakeLists.txt  package.xml  requirements.txt
predictor/models/map_model/: test_results.yaml
predictor/models/map_model/lightning_logs/version_0/: events.out.tfevents.1735013181.joosoo.1189902.0  hparams.yaml
predictor/scripts/: setup.py  simple_visualize_network.py  visualize_network.py
predictor/scripts/datatools/: extract_tracks.py  trajpred_dataset.py
predictor/scripts/models/: eth_predictor.py
predictor/scripts/network_visualizations/: README.md  autoencoder_network  eth_predictor_network
predictor/scripts/rosinterfaces/: predictor_node.py  rosbackbone.py
predictor/scripts/training_routines/: ewc.py  train.py
predictor/scripts/utils/: metrics.py  tools.py
visualization_tools/: CMakeLists.txt  package.xml
visualization_tools/launch/: visualization_tools.launch
visualization_tools/scripts/: realTimePlot.py
visualization_tools/src/: visualizationTools.cpp
